--- a/Proposal.Rmd
+++ b/Proposal.Rmd
@@ -19,7 +19,7 @@ Convective type clouds occur often near the equator. The Green Ocean Amazon 2014
 
 ## Data and Methods
 
-The Green Ocean Amazon 2014/2015 (GoAmazon) campaign included the deployment of DOE's Atmospheric Radiation Measurement (ARM) Mobile Facility at Manacapuru, Maunus, Brazil from January 2014 through December 2015. The W-band ARM Cloud Radar (WACR), a radar with high sensitivity to small cloud particles, took continuous data of the vertical profile of clouds as they advected over the site. Using the WACR reflectivities and Doppler velocities, cloud properties, including cloud base heights, CTH, and vertical velocities can be found.  This cloud information will be used to separate each cloud observed into the correct regime. Each regime and their determinant properties are listed in Table 1 and examples of radar images of each are plotted in Figure 1. A total of 792 clouds were identified during the campaign. 
+The Green Ocean Amazon 2014/2015 (GoAmazon) campaign included the deployment of DOE's Atmospheric Radiation Measurement (ARM) Mobile Facility at Manacapuru, Maunus, Brazil from January 2014 through December 2015. The W-band ARM Cloud Radar (WACR), a radar with high sensitivity to small cloud particles, took continuous data of the vertical profile of clouds as they advected over the site. Using the WACR reflectivities and Doppler velocities, cloud properties, including cloud base heights, CTH, and vertical velocities can be found.  This cloud information will be used to separate each cloud observed into the correct regime. Each regime and their determinant properties are listed in Table 1 and examples of radar images of each are plotted in Figure 1. A total of 788 clouds were identified during the campaign. 
 	
 The entrainment rate is calculated, using observations, with a simple "entraining plume" model, which will use the CTH to estimate the entrainment rate for each of the clouds in the study. This entrainment rate will then be used to find possible correlations with relative humidity and cloud thickness. Plots and $R^2$ calculations will be shown to find possible correlations and compare the results of each regime. A student's t-test will also be done to see if the entrainment rate differences for each regime are significant. 
 
@@ -27,21 +27,42 @@ The entrainment rate is calculated, using observations, with a simple "entrainin
 
 ## Preliminary Results
 
+```{r data, echo=F}
+
+source("Cloud_classification.R")
+source("Precip_classification.R")
+
+# Import data
+data <- ImportData("cloud_data_all.csv")
+
+# Classify clouds based on CTH
+shallow_cloud <- Cloud_Classification(data)$shallow
+congestus_cloud <- Cloud_Classification(data)$congestus
+
+# Classify clouds based on CBH
+shallow_precip <- Precip_Classification(shallow_cloud)$precip
+shallow_noprecip <- Precip_Classification(shallow_cloud)$noprecip
+congestus_precip <- Precip_Classification(congestus_cloud)$precip
+congestus_noprecip <- Precip_Classification(congestus_cloud)$noprecip
+
+
+```
+
+
+
 ```{r table, echo=F}
 
-# source("Cloud_classification")
-# source("Precip_classification")
+shal_p <- nrow(shallow_precip)
+shal_np <- nrow(shallow_noprecip)
+cong_p <- nrow(congestus_precip)
+cong_np <- nrow(congestus_noprecip)
 
-# shal_p <- len()
-# shal_np <- len()
-# cong_p <- len()
-# cong_np <- len()
 
-# shal <- c(paste("shallow, precip - ", shal_p), paste("shallow, no precip - ", shal_np))
-# cong <- c(paste("congestus, precip - ", cong_p), paste("congestus, no precip - ", cong_np))
+shal <- c(paste("shallow, precip - ", shal_p), paste("shallow, no precip - ", shal_np))
+cong <- c(paste("congestus, precip - ", cong_p), paste("congestus, no precip - ", cong_np))
 
-shal <- c("shallow, precip", "shallow, no precip")
-cong <- c("congestus, precip", "congestus, no precip")
+#shal <- c("shallow, precip", "shallow, no precip")
+#cong <- c("congestus, precip", "congestus, no precip")
 
 rows <- c("CBH < 100m", "CBH > 100m")
 
@@ -57,3 +78,11 @@ knitr::kable(newTable,
 
 
 ```
+
+```{r figure, echo=F}
+
+
+```
+
+
+
